--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,13 +1,13 @@
 .container.contact__container {
   width: 58%;
   display: grid;
-  grid-template-columns: 30% 58%;
-  gap: 12%;
+  grid-template-columns: 1fr;  /* Change to a single column on small screens */
+  gap: 2rem;
 }
 
 .contact__options {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));  /* Responsive columns */
   gap: 1.2rem;
 }
 
@@ -36,33 +36,6 @@
   font-size: 0.8rem;
 }
 
-/* FORM */
-
-.hidden {
-  display: none;
-}
-
-#Contact__sent-message {
-  text-align: center;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  gap: 1.2rem;
-}
-
-input,
-textarea {
-  width: 100%;
-  padding: 1.5rem;
-  border-radius: 0.5rem;
-  background: transparent;
-  border: 2px solid var(--color-primary-variant);
-  resize: none;
-  color: var(--color-white);
-}
-
 /* MEDIA QUERIES (MEDIUM DEVICES) */
 @media screen and (max-width: 1024px) {
   .container.contact__container {
@@ -74,6 +47,8 @@ textarea {
 /* MEDIA QUERIES (SMALL DEVICES) */
 @media screen and (max-width: 600px) {
   .container.contact__container {
+    flex-direction: column; /* Change to column for small devices */
+    align-items: center; /* Center items in column layout */
     width: var(--container-width-sm);
   }
 }
